--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Doc-Analyzer
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+server.port=${PORT:8080}
